Split listener and processor handler, create a buffer in between

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   listener:
     build: listener
     restart: always
-    command: python3 listener.py
+    command: python3 main.py
     volumes:
       - ./listener/src/:/project
     environment:
