Fix order handle schedules

--- a/listener/src/config.json
+++ b/listener/src/config.json
@@ -1520,5 +1520,5 @@
     ],
     "CONTRACT_ADDRESS": "0xbee217bfe06c6faaa2d5f2e06ebb84c5fb70d9bf",
     "FILTER_ID": "0x39e0e1842fc988e054eed44e3d660d3",
-    "URL_NODE": "http://ec2-18-219-4-252.us-east-2.compute.amazonaws.com:8545/"
+    "URL_NODE": "https://ropsten.node.rcn.loans:8545/"
 }
