add envvars to listener

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - ./listener/src/:/project
     environment:
      - PYTHONUNBUFFERED=1
+    env_file:
+      - config.env
     depends_on:
       - mongo
     links:
