Set to build on real master branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,8 @@ workflows:
       - deploy-ropsten:
           filters:
             branches:
-              only: aws
+              only: master
       - deploy-mainnet:
           filters:
             branches:
-              only: aws
+              only: master
