--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Create Deploy
           command: |
-            aws deploy create-deployment --application-name rcn-api --deployment-group-name rcn-api-ropsten --s3-location bucket=devops.rcn-api,key=ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz --file-exists-behavior OVERWRITE
+            aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-ropsten --s3-location bucket=devops.rcn-api,key=ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz
   deploy-mainnet:  
     docker:
       - image: circleci/python:3.6.1
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Create Deploy
           command: |
-            aws deploy create-deployment --application-name rcn-api --deployment-group-name rcn-api-mainnet --s3-location bucket=devops.rcn-api,key=mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz --file-exists-behavior OVERWRITE
+            aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-mainnet --s3-location bucket=devops.rcn-api,key=mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz
   staging-mainnet:  
     docker:
       - image: circleci/python:3.6.1
@@ -96,7 +96,7 @@ jobs:
       - run:
           name: Create Deploy
           command: |
-            aws deploy create-deployment --application-name rcn-api --deployment-group-name rcn-api-staging-mainnet --s3-location bucket=devops.rcn-api,key=staging/mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz --file-exists-behavior OVERWRITE
+            aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-staging-mainnet --s3-location bucket=devops.rcn-api,key=staging/mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz
   staging-ropsten:  
     docker:
       - image: circleci/python:3.6.1
@@ -128,7 +128,7 @@ jobs:
       - run:
           name: Create Deploy
           command: |
-            aws deploy create-deployment --application-name rcn-api --deployment-group-name rcn-api-staging-ropsten --s3-location bucket=devops.rcn-api,key=staging/ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz --file-exists-behavior OVERWRITE
+            aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-staging-ropsten --s3-location bucket=devops.rcn-api,key=staging/ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz
 workflows:
   version: 2
   build-deploy:
