--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
           name: Compress project
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
+      # Save build
+      - store_artifacts:
+          path: ../deploy-${BUILD_NAME}.tar.gz
       - run:
           name: Upload to S3
           command: |
@@ -33,38 +36,6 @@ jobs:
           name: Create Deploy
           command: |
             aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-ropsten --s3-location bucket=devops.rcn-api,key=ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz
-  deploy-mainnet:  
-    docker:
-      - image: circleci/python:3.6.1
-    environment:
-      AWS_DEFAULT_OUTPUT: json
-      AWS_DEFAULT_REGION: us-east-2
-    steps:
-      - checkout
-      - run:
-          name: Create build name
-          command: |
-            echo 'export BUILD_NAME="mainnet-"${CIRCLE_BRANCH}${CIRCLE_SHA1}' >> $BASH_ENV
-      - run:
-          name: Select AppSpec
-          command: |
-            mv ./appspec.mainnet.yml ./appspec.yml
-      - run:
-          name: Install awscli
-          command: |
-            sudo pip install awscli
-      - run:
-          name: Compress project
-          command: |
-            tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
-      - run:
-          name: Upload to S3
-          command: |
-            aws s3 cp ../deploy-${BUILD_NAME}.tar.gz s3://devops.rcn-api/mainnet/deploy-${BUILD_NAME}.tgz
-      - run:
-          name: Create Deploy
-          command: |
-            aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-mainnet --s3-location bucket=devops.rcn-api,key=mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz
   staging-mainnet:  
     docker:
       - image: circleci/python:3.6.1
@@ -89,6 +60,9 @@ jobs:
           name: Compress project
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
+      # Save build
+      - store_artifacts:
+          path: ../deploy-${BUILD_NAME}.tar.gz
       - run:
           name: Upload to S3
           command: |
@@ -121,6 +95,9 @@ jobs:
           name: Compress project
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
+      # Save build
+      - store_artifacts:
+          path: ../deploy-${BUILD_NAME}.tar.gz
       - run:
           name: Upload to S3
           command: |
@@ -134,10 +111,6 @@ workflows:
   build-deploy:
     jobs:
       - deploy-ropsten:
-          filters:
-            branches:
-              only: master
-      - deploy-mainnet:
           filters:
             branches:
               only: master
