--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
-CONTRACT_ADDRESS=0xbee217bfe06c6faaa2d5f2e06ebb84c5fb70d9bf
 URL_NODE=https://ropsten.node.rcn.loans:8545/
+# URL_NODE=http://localhost:8545
 SENTRY_DSN=
 START_SYNC=4906814
+# START_SYNC=0
