--- a/config.env
+++ b/config.env
@@ -1,5 +1,8 @@
 URL_NODE=https://ropsten.node.rcn.loans:8545/
-# URL_NODE=http://localhost:8545
 SENTRY_DSN=
 START_SYNC=4906814
-# START_SYNC=0
+
+# CONTRACT ADDRESS
+LOAN_MANAGER_ADDRESS=0x275b0DC17674e02a8a434689A638E98D9aCd417a
+DEBT_ENGINE_ADDRESS=0xdC8Dd86b3337A8EB4B1955DfF4B79676c9A40991
+INSTALLMENTS_ADDRESS=0xf1d88d1a22AD6D4A56137761e8df4aa68eDa3A11
