add npm install in test-truffle command

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -47,7 +47,7 @@ services:
   test-truffle:
     build:
       context: ./tests/truffle
-    command: truffle test
+    command: bash -c "npm install axios chai bn-chai && truffle test"
     stdin_open: true
     tty: true
     environment:
