add e2e integration test

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -47,7 +47,7 @@ services:
   test-truffle:
     build:
       context: ./tests/truffle
-    command: bash -c "npm install axios chai bn-chai && truffle test"
+    command: bash -c "npm install axios chai bn-chai mocha-steps && truffle test --require mocha-steps"
     stdin_open: true
     tty: true
     environment:
