--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
-URL_NODE=https://ropsten.node.rcn.loans:8545/
+URL_NODE=https://main.node.rcn.loans:8545/
 SENTRY_DSN=
-START_SYNC=4906814
+START_SYNC=7663470
 
 # CONTRACT ADDRESS
-LOAN_MANAGER_ADDRESS=0x978ef6D2bd7559181e6Ac82fFa5C875364d9071b
-DEBT_ENGINE_ADDRESS=0xe4BfBBB04844cdEbd6b7814183f92E0703257d48
-INSTALLMENTS_ADDRESS=0x9419ec99225fbe9e0e57d20008bfb5c9121db755
+LOAN_MANAGER_ADDRESS=0x6b3e82ddc85710ed9c32c61b317ade1b2a80fc77
+DEBT_ENGINE_ADDRESS=0xc1b4f53ab978de0bbc347c6d85cef40226f85758
+INSTALLMENTS_ADDRESS=0xb4ddf98343d24497fdd7587dfd052234cd2d43b9
