--- a/config.env
+++ b/config.env
@@ -1,8 +1,12 @@
-URL_NODE=https://main.node.rcn.loans:8545/
+URL_NODE=https://ropsten.node.rcn.loans:8545/
 SENTRY_DSN=
-START_SYNC=7663470
+START_SYNC=5604676
+
+# MONGO CONFIG
+MONGO_DB=rcn
+MONGO_HOST=mongo
 
 # CONTRACT ADDRESS
-LOAN_MANAGER_ADDRESS=0x6b3e82ddc85710ed9c32c61b317ade1b2a80fc77
-DEBT_ENGINE_ADDRESS=0xc1b4f53ab978de0bbc347c6d85cef40226f85758
-INSTALLMENTS_ADDRESS=0xb4ddf98343d24497fdd7587dfd052234cd2d43b9
+LOAN_MANAGER_ADDRESS=0xC78A11c729275E656fa3decc1f15aeBEe69d08FC
+DEBT_ENGINE_ADDRESS=0x50C544d5d44D603695Ed221421b8cB5a78681f15
+INSTALLMENTS_ADDRESS=0x97d0300281C55DC6BE27Cf57343184Ab5C8dcdFF
