add dummy collateral address

--- a/config.env
+++ b/config.env
@@ -10,3 +10,4 @@ MONGO_HOST=mongo
 LOAN_MANAGER_ADDRESS=0xC78A11c729275E656fa3decc1f15aeBEe69d08FC
 DEBT_ENGINE_ADDRESS=0x50C544d5d44D603695Ed221421b8cB5a78681f15
 INSTALLMENTS_ADDRESS=0x97d0300281C55DC6BE27Cf57343184Ab5C8dcdFF
+COLLATERAL_ADDRESS=0x0000000000000000000000000000000000000000
