--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       # Save build
       - store_artifacts:
           path: ../deploy-mainnet.tar.gz
-  deploy-ropsten:  
+  deploy-ropsten:
     docker:
       - image: circleci/python:3.6.1
     environment:
@@ -45,7 +45,7 @@ jobs:
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
       - run:
-          name: Copy project artifact 
+          name: Copy project artifact
           command: |
             cp ../deploy-${BUILD_NAME}.tar.gz ../deploy-ropsten.tar.gz
       # Save build
@@ -59,7 +59,7 @@ jobs:
           name: Create Deploy
           command: |
             aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-ropsten --s3-location bucket=devops.rcn-api,key=ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz
-  staging-mainnet:  
+  staging-mainnet:
     docker:
       - image: circleci/python:3.6.1
     environment:
@@ -84,7 +84,7 @@ jobs:
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
       - run:
-          name: Copy project artifact 
+          name: Copy project artifact
           command: |
             cp ../deploy-${BUILD_NAME}.tar.gz ../deploy-staging-mainnet.tar.gz
       # Save build
@@ -98,7 +98,7 @@ jobs:
           name: Create Deploy
           command: |
             aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-staging-mainnet --s3-location bucket=devops.rcn-api,key=staging/mainnet/deploy-${BUILD_NAME}.tgz,bundleType=tgz
-  staging-ropsten:  
+  staging-ropsten:
     docker:
       - image: circleci/python:3.6.1
     environment:
@@ -123,7 +123,7 @@ jobs:
           command: |
             tar -czvf ../deploy-${BUILD_NAME}.tar.gz *
       - run:
-          name: Copy project artifact 
+          name: Copy project artifact
           command: |
             cp ../deploy-${BUILD_NAME}.tar.gz ../deploy-staging-ropsten.tar.gz
       # Save build
@@ -137,6 +137,31 @@ jobs:
           name: Create Deploy
           command: |
             aws deploy create-deployment --file-exists-behavior=OVERWRITE --application-name rcn-api --deployment-group-name rcn-api-staging-ropsten --s3-location bucket=devops.rcn-api,key=staging/ropsten/deploy-${BUILD_NAME}.tgz,bundleType=tgz
+  # The lint-javascript job
+  lint-javascript:
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:8.12
+    steps:
+      # Checkout the code from the branch into the working_directory
+      - checkout
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      # Log the current path
+      - run:
+          name: Show current path
+          command: echo $PWD
+      # Install project dependencies
+      - run:
+          name: Install local dependencies
+          command: npm install
+      # Run lint javascript
+      - run:
+          name: ESLint
+          command: ./node_modules/.bin/eslint ./tests
+
 workflows:
   version: 2
   build-deploy:
@@ -154,3 +179,4 @@ workflows:
           filters:
             branches:
               only: development
+      - lint-javascript
