--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -26,7 +26,7 @@ services:
       - 8081:8081
     depends_on:
       - mongo
-  
+
   listener:
     build: listener
     # restart: always
@@ -35,9 +35,10 @@ services:
       - ./listener/src/:/project
     environment:
      - PYTHONUNBUFFERED=1
-     - LOAN_MANAGER_ADDRESS=0x275b0DC17674e02a8a434689A638E98D9aCd417a
-     - DEBT_ENGINE_ADDRESS=0xdC8Dd86b3337A8EB4B1955DfF4B79676c9A40991
-     - INSTALLMENTS_ADDRESS=0xf1d88d1a22AD6D4A56137761e8df4aa68eDa3A11
+     - LOAN_MANAGER_ADDRESS=0xE662674F70Fc55c1A2Dc2d15ed2C51E898091447
+     - DEBT_ENGINE_ADDRESS=0x2B7371128D88957EC1c2Cd7BE078e5708Ff41Ca6
+     - INSTALLMENTS_ADDRESS=0x0396B3E4feBb28c9Fe54D0236bE5c7D92d78B34b
+     - COLLATERAL_ADDRESS=0x690f4330B5E9Fa9d0142BA52D8f20dc767C6495C
      - URL_NODE=http://ganachecli:8545
      - START_SYNC=-1
      - SENTRY_DSN=
@@ -48,7 +49,7 @@ services:
     links:
       - mongo:mongo
       - ganachecli:ganachecli
-  
+
   ganachecli:
     image: trufflesuite/ganache-cli:latest
     command: ganache-cli -h 0.0.0.0 -m "delay practice wall dismiss amount tackle energy annual wrap digital arrive since"
@@ -56,11 +57,11 @@ services:
     tty: true
     ports:
       - 8545:8545
-  
+
   test-truffle:
     build:
       context: ./tests/truffle
-    command: bash -c "npm install axios chai bn-chai mocha-steps && truffle test"
+    command: bash -c "npm install && truffle test "
     stdin_open: true
     tty: true
     environment:
