--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "",
   "description": "",
   "files": [],
+  "scripts": {
+    "lint": "eslint ."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ripio/rcn-api"
@@ -13,6 +16,9 @@
     "url": "https://github.com/ripio/rcn-api"
   },
   "homepage": "https://ripiocredit.network",
+  "pre-commit": [
+    "lint"
+  ],
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
@@ -25,6 +31,7 @@
     "axios": "^0.19.0",
     "bn-chai": "^1.0.1",
     "chai": "^4.2.0",
-    "mocha-steps": "^1.3.0"
+    "mocha-steps": "^1.3.0",
+    "pre-commit": "^1.2.2"
   }
 }
