parametrize mongo credentials

--- a/config.env
+++ b/config.env
@@ -2,3 +2,8 @@ CONTRACT_ADDRESS=0xbee217bfe06c6faaa2d5f2e06ebb84c5fb70d9bf
 URL_NODE=https://ropsten.node.rcn.loans:8545/
 SENTRY_DSN=
 START_SYNC=3169000
+
+# MONGO CONFIG
+MONGO_DB=rcn
+MONGO_HOST=mongo
+
