Add collateral creation test

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -38,6 +38,7 @@ services:
      - LOAN_MANAGER_ADDRESS=0x275b0DC17674e02a8a434689A638E98D9aCd417a
      - DEBT_ENGINE_ADDRESS=0xdC8Dd86b3337A8EB4B1955DfF4B79676c9A40991
      - INSTALLMENTS_ADDRESS=0xf1d88d1a22AD6D4A56137761e8df4aa68eDa3A11
+     - COLLATERAL_ADDRESS=0x690f4330B5E9Fa9d0142BA52D8f20dc767C6495C
      - URL_NODE=http://ganachecli:8545
      - START_SYNC=-1
      - SENTRY_DSN=
