--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-URL_NODE=https://ropsten.node.rcn.loans:8545/
+URL_NODE=http://ganachecli:8545
 SENTRY_DSN=
 START_SYNC=5965036
 
@@ -10,3 +10,6 @@ MONGO_HOST=mongo
 LOAN_MANAGER_ADDRESS=0x2694A6274906F488dEFc6ab2093342cDDCdBDC5C
 DEBT_ENGINE_ADDRESS=0x17F910234Fe7d4CB6c54601Bf0cf5599B545084B
 INSTALLMENTS_ADDRESS=0xC67e7fdcBEa83Fb5a2BB2b60b794efff016C7CF7
+
+#Test
+COLLATERAL_ADDRESS=0x690f4330B5E9Fa9d0142BA52D8f20dc767C6495C
