--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -61,7 +61,7 @@ services:
   test-truffle:
     build:
       context: ./tests/truffle
-    command: bash -c "npm install axios chai bn-chai && truffle test"
+    command: bash -c "npm install axios chai bn-chai json-bigint && truffle test"
     stdin_open: true
     tty: true
     environment:
