--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -10,8 +10,11 @@ services:
       - 8000:8000
     links:
       - mongo:mongo
-    env_file:
-      - config.env
+    environment:
+      - URL_NODE=http://ganachecli:8545
+      - MONGO_DB=rcn
+      - MONGO_HOST=mongo
+      - COLLATERAL_ADDRESS=0x690f4330B5E9Fa9d0142BA52D8f20dc767C6495C
     depends_on:
       - mongo
   mongo:
