first version new core

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - mongo
   listener:
     build: listener
-    restart: always
+    #restart: always
     command: python3 main.py
     volumes:
       - ./listener/src/:/project
