fix imports collaterals

--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
-URL_NODE=https://ropsten.node.rcn.loans:8545/
+URL_NODE=https://ropsten.infura.io/v3/fb5d21a911c1487ba9835be28b370b12
 SENTRY_DSN=
-#START_SYNC=5604676
-START_SYNC=5963400
+START_SYNC=6073409
+
 # MONGO CONFIG
 MONGO_DB=rcn
 MONGO_HOST=mongo
 
 # CONTRACT ADDRESS
-LOAN_MANAGER_ADDRESS=0x2694A6274906F488dEFc6ab2093342cDDCdBDC5C
-DEBT_ENGINE_ADDRESS=0x17F910234Fe7d4CB6c54601Bf0cf5599B545084B
-INSTALLMENTS_ADDRESS=0xC67e7fdcBEa83Fb5a2BB2b60b794efff016C7CF7
-COLLATERAL_ADDRESS=0x5DF04c110C921bFb929E0E85071bfbb0bd741158
+LOAN_MANAGER_ADDRESS=0x39E67f667eD83c8A2DB0b18189FE93f57081b9aE
+DEBT_ENGINE_ADDRESS=0xb2403dCA04AB49492E1e05b29F26E6C01Ac5D604
+INSTALLMENTS_ADDRESS=0x41e9D0B6a8Ce88989c2e7b3CaE42ECFAc44c9603
+COLLATERAL_ADDRESS=0xC122F95FFD312006551f6afE0980471386a7E8b0
