--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build the tagged Docker image listener
-        run: docker build listener --file Dockerfile --tag rcndev/rcnapi-diaspore-listener:${GITHUB_REF}
+        run: docker build listener --file Dockerfile --tag rcndev/rcnapi-diaspore-listener:${{steps.vars.outputs.VERSION}}
       - name: Push the tagged Docker image listener
-        run: docker push rcndev/rcnapi-diaspore-listener:${GITHUB_REF}
+        run: docker push rcndev/rcnapi-diaspore-listener:${{steps.vars.outputs.VERSION}}
       - name: Build the latest Docker image api
-        run: docker build api-falcon --file Dockerfile --tag rcndev/rcnapi-diaspore-api-falcon:${GITHUB_REF}
+        run: docker build api-falcon --file Dockerfile --tag rcndev/rcnapi-diaspore-api-falcon:${{steps.vars.outputs.VERSION}}
       - name: Push the latest Docker image api
-        run: docker push rcndev/rcnapi-diaspore-api-falcon:${GITHUB_REF}
+        run: docker push rcndev/rcnapi-diaspore-api-falcon:${{steps.vars.outputs.VERSION}}
