fix tx not found in handlers, None if ocurrs

--- a/config.env
+++ b/config.env
@@ -1,7 +1,6 @@
-#URL_NODE=https://mainnet.infura.io/v3/fb5d21a911c1487ba9835be28b370b12
-URL_NODE=https://mainnet.infura.io/v3/1ccde1462b554b82a192b2e2cc987e4c
+URL_NODE=https://ropsten.infura.io/v3/1ccde1462b554b82a192b2e2cc987e4c
 SENTRY_DSN=
-START_SYNC=8478283
+START_SYNC=6405112
 STEP_BLOCKS=5000
 
 # MONGO CONFIG
@@ -9,7 +8,7 @@ MONGO_DB=rcn
 MONGO_HOST=mongo
 
 # CONTRACT ADDRESS
-LOAN_MANAGER_ADDRESS=0xb55b0f33d6a2a03a275ca85d58e9357e1a141187
-DEBT_ENGINE_ADDRESS=0x80db22675DAd70e44b64029510778583187fadDb
-INSTALLMENTS_ADDRESS=0xb2c86bcda2b845e7c61eb5443bc9bb57d48e4bb6
-COLLATERAL_ADDRESS=0x0000000000000000000000000000000000000000
+LOAN_MANAGER_ADDRESS=0x39E67f667eD83c8A2DB0b18189FE93f57081b9aE
+DEBT_ENGINE_ADDRESS=0xb2403dCA04AB49492E1e05b29F26E6C01Ac5D604
+INSTALLMENTS_ADDRESS=0x41e9D0B6a8Ce88989c2e7b3CaE42ECFAc44c9603
+COLLATERAL_ADDRESS=0x391720EfbaEA47130F198263F7c3abEFC230d14b
